--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -26,3 +26,21 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext.versions = [:]
+versions.compileSdk = 28
+versions.minSdk = 15
+versions.targetSdk = 28
+versions.support = "28.0.0"
+versions.constraintLayout = "1.1.3"
+versions.rxjava = "2.2.8"
+versions.rxandroid = "2.1.1"
+versions.dagger = "2.24"
+versions.gson = "2.8.5"
+versions.retrofit = "2.4.0"
+versions.okhttp = "3.12.1"
+versions.glide = "4.9.0"
+versions.recyclerview = "1.0.0"
+versions.appcompat = "1.1.0"
+versions.lifecycle = "2.1.0"
+versions.okhttpLoggingInterceptor = "3.12.1"
