--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ versions.retrofit = "2.4.0"
 versions.okhttp = "3.12.1"
 versions.glide = "4.9.0"
 versions.recyclerview = "1.0.0"
+versions.cardView = "1.0.0"
 versions.appcompat = "1.1.0"
 versions.lifecycle = "2.1.0"
 versions.okhttpLoggingInterceptor = "3.12.1"
