implement view hodlders

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$versions.recyclerview"
     implementation "androidx.cardview:cardview:$versions.cardView"
     implementation "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle"
+    implementation "com.google.android.material:material:1.1.0-alpha10"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02"
 }
