--- a/build.gradle
+++ b/build.gradle
@@ -46,3 +46,6 @@ versions.appcompat = "1.1.0"
 versions.lifecycle = "2.1.0"
 versions.okhttpLoggingInterceptor = "3.12.1"
 versions.material = "1.1.0"
+versions.ktx = "1.1.0"
+versions.material = "1.1.0-alpha10"
+versions.swiperefreshlayout = "1.1.0-alpha02"
