--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+
+    <!-- Need to fix this once google fix the issue  -->
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+
     <!-- usesCleartextTraffic to solve CLEARTEXT communication issue-->
     <application
         android:name=".MyApplication"
